# autd3-cpp-link-ethercrab

./: .gitignore  CMakeLists.txt  Makefile.toml  README.md
.github/workflows/: build.yml  coverage.yml  pr.yml  release.yml
examples/: CMakeLists.txt  ethercrab.cpp
include/: autd3_link_ethercrab.hpp
include/autd3_link_ethercrab/: ethercrab.hpp  native_methods.hpp
include/autd3_link_ethercrab/native_methods/: autd3-capi-link-ethercrab.h  autd3-link-ethercrab.h
tests/: CMakeLists.txt  ethercrab.cpp  gtest.cmake
tools/wrapper-generator/src/: main.rs
